linked JS file to HTML

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <title>MyArray</title>
   </head>
   <body>
-    <ul id="buttons">
-      <li> <button>Button</button>
+    <ul id="button">
+      <li> <button>Button</button></li>
     </ul>
+    <p id ="message"></p>
     <script>
     </script>
-    <script src="./lib/jquery-1.11.2.js"></script>
-    <script src="randomArray.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script type="text/javascript" src="randomArray.js"></script>
   </body>
 </html>
